Fixed minimum height problem. Also, had to set z-index of #pythonOutput in the Drupal Block to 1000 to make the animations of the Metadata editor appear over the surrounding text when the height of the block is at it's minimum, and the incoming form element's height is taller than the block's height.

--- a/frontend/css/metadata.css
+++ b/frontend/css/metadata.css
@@ -453,5 +453,5 @@ a.initial:after {
    during animation.
 */
 .ui-view-container {
-    height: 400;
+	min-height:300px;
 }
